Metal gif and index
- Updated Skill Chart

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <hr class="light">
                     <p class="text-faded">From software auditor to virtual reality game developer, EJ has come a long way. During his undergraduate career at Lehigh University, EJ worked hard auditing software for Lehigh's Center for Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's degree in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
                     <p class="text-faded">EJ moved on to developing touch screen menus and SQL databases for bars and restaurants at Harbortouch America. And soon after, he was blessed with an opportunity to begin doing iOS development. EJ developed over 10 iPad and iPhone apps during his training which opened the doorway to Android development.</p>
-                    <p class="text-faded">EJ has worked with big name companies like Ecotech Marine and Highmark Health, and now works for Comcast in Center City Philadelphia developing the company's newest virtual and mixed reality experiences!</p>
+                    <p class="text-faded">EJ has worked with big name companies like Ecotech Marine and Highmark Health, and now works for the biggest corporation in Center City Philadelphia developing virtual and mixed reality experiences!</p>
                     <p class="text-faded">In his free time, EJ produces his own music and develops his own video games. In addition, he practices Wing Chun kung fu at <a href="https://www.philadelphiawingchun.com/" style="color: aquamarine;font-weight: bold;">Philadelphia Wing Chun</a>.</p>
                     <p class="text-faded">Only one goal remains, developing a AAA game title for a major game studio, a goal he has his mind set on.</p>
                 </div>
@@ -419,41 +419,37 @@
                         <thead class="thead-inverse">
                             <tr>
                                 <th>Programming Languages</th>
-                                <th>Experience in Years</th>
+                                <th>Years of Professional Usage</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Java</td>
-                                <td>7</td>
+                                <td>C#</td>
+                                <td>4</td>
                             </tr>
                             <tr>
                                 <td>HTML</td>
-                                <td>6</td>
+                                <td>4 to 5</td>
                             </tr>
                             <tr>
                                 <td>CSS</td>
-                                <td>5</td>
+                                <td>4 to 5</td>
                             </tr>
                             <tr>
                                 <td>Javascript</td>
-                                <td>5</td>
+                                <td>4 to 5</td>
+                            </tr>
+                            <tr>
+                                <td>Java</td>
+                                <td>4 to 5</td>
                             </tr>
                             <tr>
                                 <td>SQL</td>
-                                <td>5</td>
-                            </tr>
-                            <tr>
-                                <td>C#</td>
-                                <td>5</td>
-                            </tr>
-                            <tr>
-                                <td>C++</td>
                                 <td>2</td>
                             </tr>
                             <tr>
                                 <td>High Level Shader Language</td>
-                                <td>2</td>
+                                <td>1 to 2</td>
                             </tr>
                             <tr>
                                 <td>Three.js</td>
@@ -464,40 +460,19 @@
                                 <td>2</td>
                             </tr>
                             <tr>
-                                <td>Objective C</td>
-                                <td>1</td>
-                            </tr>
-                            <tr>
-                                <td>Swift</td>
-                                <td>1</td>
-                            </tr>
-                            <tr>
-                                <td>Python</td>
-                                <td>1</td>
-                            </tr>
-                            <tr>
                                 <td>Node.js</td>
-                                <td>1</td>
+                                <td>2</td>
                             </tr>
-
                             <tr>
                                 <td>Bootstrap</td>
                                 <td>1</td>
                             </tr>
                             <tr>
-                                <td>Eprime</td>
+                                <td>C++</td>
                                 <td>1</td>
                             </tr>
                             <tr>
-                                <td>JSF</td>
-                                <td>1</td>
-                            </tr>
-                            <tr>
-                                <td>JSP</td>
-                                <td>1</td>
-                            </tr>
-                            <tr>
-                                <td>Visual Basic for Applications</td>
+                                <td>Objective C</td>
                                 <td>1</td>
                             </tr>
                         </tbody>
@@ -513,8 +488,12 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Android</td>
-                                <td>4</td>
+                                <td>Android (Native)</td>
+                                <td>2</td>
+                            </tr>
+                            <tr>
+                                <td>Android (Unity Games)</td>
+                                <td>1</td>
                             </tr>
                             <tr>
                                 <td>iOS</td>
@@ -532,15 +511,15 @@
                         <tbody>
                             <tr>
                                 <td>Unity</td>
-                                <td>5</td>
+                                <td>4</td>
                             </tr>
                             <tr>
                                 <td>Unreal Engine</td>
-                                <td>2</td>
+                                <td>1</td>
                             </tr>
                             <tr>
                                 <td>Blender</td>
-                                <td>3</td>
+                                <td>2</td>
                             </tr>
                         </tbody>
                     </table>
@@ -558,7 +537,7 @@
                             </tr>
                             <tr>
                                 <td>A-Frame WebVR</td>
-                                <td>2</td>
+                                <td>3</td>
                             </tr>
                             
                             <tr>
