--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Certified </br> Scrum Master & Product Owner <br/>in <br/> VR and Games</h1>
+                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Software Dev & Digital DJ </br> in VR and Games</br></br>Scrum Master</br>Product Owner</br>Amazon Web Services</br>Certified</h1>
                 <!-- <hr>
                 <p style="text-shadow: 0.05em 0.05em #55b3ff;">Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p> -->
             </div>
@@ -140,10 +140,11 @@
                     <h2 class="section-heading">About EJ</h2>
                     <hr class="light">
                     <p class="text-faded">From software auditor to virtual reality game developer, EJ has come a long way. During his undergraduate career at Lehigh University, EJ worked hard auditing software for Lehigh's Center for Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's degree in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
-                    <p class="text-faded">EJ moved on to developing touch screen menus and SQL databases for bars and restaurants at Harbortouch America. And soon after, he was blessed with an opportunity to begin doing iOS development. EJ developed over 10 iPad and iPhone apps during his training which opened the doorway to Android development.</p>
-                    <p class="text-faded">EJ has worked with big name companies like Ecotech Marine and Highmark Health, and now works for the biggest corporation in Center City Philadelphia developing virtual and mixed reality experiences!</p>
-                    <p class="text-faded">In his free time, EJ produces his own music and develops his own video games. In addition, he practices Wing Chun kung fu at <a href="https://www.philadelphiawingchun.com/" style="color: aquamarine;font-weight: bold;">Philadelphia Wing Chun</a>.</p>
-                    <p class="text-faded">Only one goal remains, developing a AAA game title for a major game studio, a goal he has his mind set on.</p>
+                    <p class="text-faded">EJ moved on to designing POS touch screen menus for bars and restaurants at Harbortouch America. And soon after, he was blessed with an opportunity to begin doing iOS development. EJ developed 10 example iPad and iPhone apps during his training which opened the doorway to Android development.</p>
+                    <p class="text-faded">EJ has worked with big name companies like Ecotech Marine and Highmark Health, and was a technical R&D specialist for Comcast, the largest corporation in Center City Philadelphia, developing virtual and mixed reality experiences for 6 years.</p>
+                    <p class="text-faded">Today, EJ specializes in cloud development and support for a team of financial analysts at one of only 12 central banks in the United States, contributing to the US government's monetary policy.</p>
+                    <p class="text-faded">In his free time, EJ immerses himself in his musical efforts, DJing for video game communities and making his own music. He is an avid gamer with a love of all things Final Fantasy. In addition, he has earned his black sash practicing Wing Chun kung fu and is now a teacher at <a href="https://www.instagram.com/philadelphiawingchunschool" style="color: aquamarine;font-weight: bold;">Philadelphia Wing Chun</a>.</p>
+                    <p class="text-faded">EJ's current mission is to widen his skill set and expand his abilities. He has his eyes set on promoting Scrum, recruiting, and becoming an icon in tech and games.</p>
                 </div>
             </div>
         </div>
@@ -241,6 +242,19 @@
                                     </div>
                                 </a>
                             </li>
+                            <li>
+                                <a href="https://fusion.crswll.now.sh/" class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/food_league.png" class="img-scroller" alt="Philadelphia Fusion Concept App">
+                                    <div class="portfolio-box-caption">
+                                        <div class="portfolio-box-caption-content">
+                                            <div class="portfolio-box-caption-content">
+                                                <div class="project-name">Philadelphia Fusion Arena Concept App</div>
+                                                <div class="project-category text-faded">A web based mobile app concept for the new Philadelphia Fusion E-Sports Arena! This app contains a unity game and other cool features! Best viewed on mobile.</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -319,6 +333,17 @@
                                         <div class="portfolio-box-caption-content">
                                             <div class="project-name">EcoSmart Live</div>
                                             <div class="project-category text-faded">An Android application that turns your cell phone into a remote control for fish tank lights and pumps</div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="LOF_AvatarCreator/lof_avatar_creator.html" class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/lof_avatar_creator.png" class="img-scroller" alt="Philadelphia Fusion Avatar Creator">
+                                    <div class="portfolio-box-caption">
+                                        <div class="portfolio-box-caption-content">
+                                            <div class="project-name">League of Food Avatar Creator Concept</div>
+                                            <div class="project-category text-faded">A really cool avatar creator concept app for Philadelphia Fusion!</div>
                                         </div>
                                     </div>
                                 </a>
@@ -460,6 +485,10 @@
                                 <td>2</td>
                             </tr>
                             <tr>
+                                <td>VBA (Excel)</td>
+                                <td>2</td>
+                            </tr>
+                            <tr>
                                 <td>Node.js</td>
                                 <td>2</td>
                             </tr>
@@ -575,6 +604,10 @@
                                 <td>09/2017</td>
                             </tr>
                             <tr>
+                                <td><a target="_blank" href="https://www.credly.com/badges/f3ba68b4-3649-4901-a93b-ac98eb73ecf2/linked_in_profile" style="color: aquamarine;font-weight: bold;">AWS Cloud Practitioner</a></td>
+                                <td>12/2025</td>
+                            </tr>
+                            <tr>
                                 <td><a target="_blank" href="img/certifications/MannScrumCert2017.png" style="color: aquamarine;font-weight: bold;">Certified Scrum Master</a></td>
                                 <td>03/2017</td>
                             </tr>
@@ -595,7 +628,10 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Contact</h2>
                     <hr class="primary">
-                    <p>Reach out to me if you need a developer or sound produced for your next game, virtual reality, or music project!</p>
+                    <p>Wondering how to start a project in games or mixed reality?</p>
+                    <p>Are you seeking a DJ or musical advice?</p>
+                    </br>
+                    <p>I'm looking for work! Send me an email and let's connect!</p>
                 </div>
                 <div class="col-lg-12 text-center">
                     <a href="mailto:mannmade@udel.edu">
