--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="Videos/LOF_avatar_creator" class="portfolio-box" target="_blank">
+                                <a href="Videos/LOF_avatar_creator.mp4" class="portfolio-box" target="_blank">
                                     <img src="img/portfolio/thumbnails/lof_avatar_creator.png" class="img-scroller" alt="Philadelphia Fusion Avatar Creator">
                                     <div class="portfolio-box-caption">
                                         <div class="portfolio-box-caption-content">
