--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Software Dev & Digital DJ </br> in VR and Games</br></br>Scrum Master</br>Product Owner</br>Amazon Web Services</br>Certified</h1>
+                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Software Dev & Digital DJ </br> in VR and Games</br></br>Scrum Master</br>Product Owner</br>AWS Certified</br>Azure Certified</h1>
                 <!-- <hr>
                 <p style="text-shadow: 0.05em 0.05em #55b3ff;">Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p> -->
             </div>
@@ -595,25 +595,29 @@
                         <thead class="thead-inverse">
                             <tr>
                                 <th>Certifications</th>
-                                <th>Date Acquired</th>
+                                <th>Year Acquired</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td><a target="_blank" href="img/certifications/MannUnityCert2017.png" style="color: aquamarine;font-weight: bold;">Unity Certified Developer</a></td>
-                                <td>09/2017</td>
-                            </tr>
-                            <tr>
-                                <td><a target="_blank" href="https://www.credly.com/badges/f3ba68b4-3649-4901-a93b-ac98eb73ecf2/linked_in_profile" style="color: aquamarine;font-weight: bold;">AWS Cloud Practitioner</a></td>
-                                <td>12/2025</td>
+                                <td>2017</td>
                             </tr>
                             <tr>
                                 <td><a target="_blank" href="img/certifications/MannScrumCert2017.png" style="color: aquamarine;font-weight: bold;">Certified Scrum Master</a></td>
-                                <td>03/2017</td>
+                                <td>2017</td>
                             </tr>
                             <tr>
                                 <td><a target="_blank" href="img/certifications/MannProductOwnerCert2021.png" style="color: aquamarine;font-weight: bold;">Certified Product Owner</a></td>
-                                <td>12/2021</td>
+                                <td>2021</td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="https://www.credly.com/badges/f3ba68b4-3649-4901-a93b-ac98eb73ecf2/linked_in_profile" style="color: aquamarine;font-weight: bold;">AWS Cloud Practitioner</a></td>
+                                <td>2022</td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="https://www.credly.com/badges/08c19146-f1ee-4b8b-863d-545bf8ebc0cc/linked_in_profile" style="color: aquamarine;font-weight: bold;">Microsoft Azure Fundamentals</a></td>
+                                <td>2023</td>
                             </tr>
                         </tbody>
                     </table>
