--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <div id="app_list_1" class="innerScrollArea">
                         <ul>
                             <!-- Define photos here -->
-                            <li>
+                            <!-- <li>
                                 <a href="https://twitch.tv/djmannmade" class="portfolio-box" target="_blank">
                                     <img src="img/portfolio/thumbnails/djmannmade.png" class="img-scroller" alt="DJ Mannmade">
                                     <div class="portfolio-box-caption">
@@ -175,7 +175,7 @@
                                         </div>
                                     </div>
                                 </a>
-                            </li>
+                            </li> -->
                             <li>
                                 <a href="videos/mm_blue_logo.mp4" class="portfolio-box" target="_blank">
                                     <img src="img/portfolio/thumbnails/mm_blue_logo.png" class="img-scroller" alt="After Effects Saber Logo">
@@ -382,7 +382,8 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-4 text-center"></div>
+                <div class="col-lg-2 text-center">
                     <div class="service-box">
                         <a href="https://www.linkedin.com/in/mannej/" target="_blank">
                             <img src="img/icons/linkedin.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Linkedin">
@@ -390,7 +391,7 @@
                         <h3>Linkedin</h3>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-2 text-center">
                     <div class="service-box">
                         <a href="https://github.com/mann0nomix" target="_blank">
                             <img src="img/icons/github.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Github">
@@ -398,7 +399,7 @@
                         <h3>Github</h3>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <!-- <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://www.twitch.tv/djmannmade" target="_blank">
                             <img src="img/icons/twitch.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Twitch">
@@ -413,7 +414,7 @@
                         </a>
                         <h3>SoundCloud</h3>
                     </div>
-                </div>
+                </div> -->
                 <!-- <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://twitter.com/djmannmade" target="_blank">
@@ -619,6 +620,10 @@
                                 <td><a target="_blank" href="https://www.credly.com/badges/08c19146-f1ee-4b8b-863d-545bf8ebc0cc/linked_in_profile" style="color: aquamarine;font-weight: bold;">Microsoft Azure Fundamentals</a></td>
                                 <td>2023</td>
                             </tr>
+                            <tr>
+                                <td><a target="_blank" href="img/certifications/power_platform_badge_1524x828.png" style="color: aquamarine;font-weight: bold;">Power Platform Advisor for the Federal Reserve</a></td>
+                                <td>2023</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -635,7 +640,7 @@
                     <p>Wondering how to start a project in games or mixed reality?</p>
                     <p>Are you seeking a DJ or musical advice?</p>
                     </br>
-                    <p>I'm looking for work! Send me an email and let's connect!</p>
+                    <p>Reach out and connect with me on Social Media!</p>
                 </div>
                 <div class="col-lg-12 text-center">
                     <a href="mailto:mannmade@udel.edu">
