--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
-    <meta name="author" content="Eustace R Mann Jr">
-    <meta name="keywords" content="games, apps, development, dev, game, portfolio, Mann, Jr, Eustace, EJ, java, android, c#, unity, twitch, twitter, streaming, music, edm, dj, soundcloud, electronic, c++, trance, house, production, comcast">
+    <meta name="description" content="An online portfolio of the Tech Guru Mann, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
+    <meta name="author" content="Tech Guru Mann">
+    <meta name="keywords" content="games, apps, development, dev, game, portfolio, Mann, java, android, c#, unity, twitch, twitter, streaming, music, edm, dj, soundcloud, electronic, c++, trance, house, production, comcast">
 
-    <meta property='og:title' content="Eustace R Mann Jr" />
-    <meta property="og:image" content="http://ejmanngamedev.com/img/linkedin/linkedin_image.png" />
-    <meta property="og:url" content="http://www.ejmanngamedev.com/" />
+    <meta property='og:title' content="Tech Guru Mann" />
+    <meta property="og:image" content="http://techgurumann.com/img/linkedin/linkedin_image.png" />
+    <meta property="og:url" content="http://www.techgurumann.com/" />
     <meta property="og:type" content="website" />
-    <meta property='og:description' content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!" />
-    <meta property="og:site_name" content="Eustace R Mann Jr">
-    <meta property="og:see_also" content="http://ejmanngamedev.com/index.html">
+    <meta property='og:description' content="An online portfolio of the Tech Guru Mann, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!" />
+    <meta property="og:site_name" content="Tech Guru Mann">
+    <meta property="og:see_also" content="http://techgurumann.com/index.html">
 
-    <meta itemprop="name" content="Eustace R Mann Jr">
-    <meta itemprop="description" content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
-    <meta itemprop="image" content="http://ejmanngamedev.com/img/linkedin/linkedin_image.png">
+    <meta itemprop="name" content="Tech Guru Mann">
+    <meta itemprop="description" content="An online portfolio of the Tech Guru Mann, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
+    <meta itemprop="image" content="http://techgurumann.com/img/linkedin/linkedin_image.png">
 
-    <meta name="twitter:card" content="Eustace R Mann Jr">
-    <meta name="twitter:url" content="http://ejmanngamedev.com">
-    <meta name="twitter:title" content="Eustace R Mann Jr">
-    <meta name="twitter:description" content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
-    <meta name="twitter:image" content="http://ejmanngamedev.com/img/linkedin/linkedin_image.png">
+    <meta name="twitter:card" content="Tech Guru Mann">
+    <meta name="twitter:url" content="http://techgurumann.com">
+    <meta name="twitter:title" content="Tech Guru Mann">
+    <meta name="twitter:description" content="An online portfolio of the Tech Guru Mann, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
+    <meta name="twitter:image" content="http://techgurumann.com/img/linkedin/linkedin_image.png">
 
-    <title>Eustace R Mann Jr</title>
+    <title>Tech Guru Mann</title>
 
     <link rel="author" href="https://plus.google.com/+EJMann"/>
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
@@ -95,7 +95,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Eustace R Mann Jr</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Tech Guru Mann</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -126,7 +126,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Software Dev & Digital DJ </br> in VR and Games</br></br>Scrum Master</br>Product Owner</br>AWS Certified</br>Azure Certified</h1>
+                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Software Dev & Digital DJ</br>VR | Games | Cloud</br></br></br></br>Scrum Master | Product Owner</br>AWS Certified | Azure Certified</h1>
                 <!-- <hr>
                 <p style="text-shadow: 0.05em 0.05em #55b3ff;">Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p> -->
             </div>
@@ -137,14 +137,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">About EJ</h2>
+                    <h2 class="section-heading">About the Tech Guru Mann</h2>
                     <hr class="light">
-                    <p class="text-faded">From software auditor to virtual reality game developer, EJ has come a long way. During his undergraduate career at Lehigh University, EJ worked hard auditing software for Lehigh's Center for Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's degree in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
-                    <p class="text-faded">EJ moved on to designing POS touch screen menus for bars and restaurants at Harbortouch America. And soon after, he was blessed with an opportunity to begin doing iOS development. EJ developed 10 example iPad and iPhone apps during his training which opened the doorway to Android development.</p>
-                    <p class="text-faded">EJ has worked with big name companies like Ecotech Marine and Highmark Health, and was a technical R&D specialist for Comcast, the largest corporation in Center City Philadelphia, developing virtual and mixed reality experiences for 6 years.</p>
-                    <p class="text-faded">Today, EJ specializes in cloud development and support for a team of financial analysts at one of only 12 central banks in the United States, contributing to the US government's monetary policy.</p>
-                    <p class="text-faded">In his free time, EJ immerses himself in his musical efforts, DJing for video game communities and making his own music. He is an avid gamer with a love of all things Final Fantasy. In addition, he has earned his black sash practicing Wing Chun kung fu and is now a teacher at <a href="https://www.instagram.com/philadelphiawingchunschool" style="color: aquamarine;font-weight: bold;">Philadelphia Wing Chun</a>.</p>
-                    <p class="text-faded">EJ's current mission is to widen his skill set and expand his abilities. He has his eyes set on promoting Scrum, recruiting, and becoming an icon in tech and games.</p>
+                    <p class="text-faded">From software auditor to virtual reality game developer, the Tech Guru Mann has come a long way. During his undergraduate career at Lehigh University, the tech guru worked hard auditing software for Lehigh's Center for Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's degree in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
+                    <p class="text-faded">The guru moved on to designing POS touch screen menus for bars and restaurants at Harbortouch America. And soon after, he was blessed with an opportunity to begin doing mobile development. The tech guru developed 10 example iPad and iPhone apps during his training and later moved on to Android development.</p>
+                    <p class="text-faded">The guru has worked with big name companies like Ecotech Marine and Highmark Health, and was a technical R&D specialist for Comcast, the largest corporation in Center City Philadelphia, developing virtual and mixed reality experiences for 6 years.</p>
+                    <p class="text-faded">Today, the Tech Guru Mann specializes in cloud development and contributes to the safety, support, & security of the US government's monetary policy on a daily basis.</p>
+                    <p class="text-faded">In his free time, the guru immerses himself in his musical efforts, DJing for video game communities, volunteering for cons, and making his own music. He is an avid gamer with a love of all things Final Fantasy.</p>
+                    <p class="text-faded">The Tech Guru Mann worked hard for 6 years to earn his black sash in the art of Wing Chun kung fu at <a href="https://www.instagram.com/philadelphiawingchunschool" style="color: aquamarine;font-weight: bold;">Philadelphia Wing Chun</a>, and is now the latest swordsman at <a href="https://www.phillykendo.com" style="color: aquamarine;font-weight: bold;">US Yong Kum Kwan Kendo school</a>.</p>
                 </div>
             </div>
         </div>
@@ -176,7 +176,7 @@
                                     </div>
                                 </a>
                             </li> -->
-                            <li>
+                            <!-- <li>
                                 <a href="videos/mm_blue_logo.mp4" class="portfolio-box" target="_blank">
                                     <img src="img/portfolio/thumbnails/mm_blue_logo.png" class="img-scroller" alt="After Effects Saber Logo">
                                     <div class="portfolio-box-caption">
@@ -184,6 +184,19 @@
                                             <div class="portfolio-box-caption-content">
                                                 <div class="project-name">After Effects Saber Logo for <br/> DJ Mannmade</div>
                                                 <div class="project-category text-faded">A self-made awesome animated logo using the Saber plugin for After Effects for DJ Mannmade</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li> -->
+                            <li>
+                                <a class="portfolio-box" target="_blank">
+                                    <img src="img/portfolio/thumbnails/mm_selfie_polar.png" class="img-scroller" alt="After Effects Real Photo Edit">
+                                    <div class="portfolio-box-caption">
+                                        <div class="portfolio-box-caption-content">
+                                            <div class="portfolio-box-caption-content">
+                                                <div class="project-name">After Effects Real Photo Edit</div>
+                                                <div class="project-category text-faded">An exercise in graphic design for a side project</div>
                                             </div>
                                         </div>
                                     </div>
@@ -229,7 +242,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="videos/mm_orange_logo.mp4" class="portfolio-box" target="_blank">
                                     <img src="img/portfolio/thumbnails/mm_orange_logo.png" class="img-scroller" alt="After Effects Circle Logo">
                                     <div class="portfolio-box-caption">
@@ -241,7 +254,7 @@
                                         </div>
                                     </div>
                                 </a>
-                            </li>
+                            </li> -->
                             <li>
                                 <a href="https://fusion.crswll.now.sh/" class="portfolio-box" target="_blank">
                                     <img src="img/portfolio/thumbnails/food_league.png" class="img-scroller" alt="Philadelphia Fusion Concept App">
@@ -255,13 +268,6 @@
                                     </div>
                                 </a>
                             </li>
-                        </ul>
-                    </div>
-                </div>
-                <div id="scroller2" style="height: 14em;">
-                    <div id="app_list_2" class="innerScrollArea">
-                        <ul>
-                            <!-- Define photos here -->
                             <li>
                                 <a href="UnrealBlocks/MovingBlocks.html" class="portfolio-box" target="_blank">
                                     <img src="img/portfolio/thumbnails/blocks.png" class="img-scroller" alt="Moving Blocks Animation">
@@ -275,6 +281,13 @@
                                     </div>
                                 </a>
                             </li>
+                        </ul>
+                    </div>
+                </div>
+                <div id="scroller2" style="height: 14em;">
+                    <div id="app_list_2" class="innerScrollArea">
+                        <ul>
+                            <!-- Define photos here -->
                             <li>
                                 <a href="https://www.northampton.aaa.com/" class="portfolio-box" target="_blank">
                                     <img src="img/portfolio/thumbnails/4.png" class="img-scroller" alt="AAA Northampton County Website">
@@ -288,7 +301,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="videos/mm_metal.gif" class="portfolio-box" target="_blank">
                                     <img src="img/portfolio/thumbnails/mannmade_metal.png" class="img-scroller" alt="After Effects Polar Selfie Art">
                                     <div class="portfolio-box-caption">
@@ -300,7 +313,7 @@
                                         </div>
                                     </div>
                                 </a>
-                            </li>
+                            </li> -->
                             <li>
                                 <a class="portfolio-box" target="_blank">
                                     <!-- href="https://www.youtube.com/playlist?list=PLwOpE5mgplNaqZ4qnQ6j0jWn-F6xZVJ8z" -->
@@ -451,31 +464,31 @@
                         <tbody>
                             <tr>
                                 <td>C#</td>
-                                <td>4</td>
+                                <td>5</td>
                             </tr>
                             <tr>
                                 <td>HTML</td>
-                                <td>4 to 5</td>
+                                <td>6</td>
                             </tr>
                             <tr>
                                 <td>CSS</td>
-                                <td>4 to 5</td>
+                                <td>6</td>
                             </tr>
                             <tr>
                                 <td>Javascript</td>
-                                <td>4 to 5</td>
+                                <td>5</td>
                             </tr>
                             <tr>
                                 <td>Java</td>
-                                <td>4 to 5</td>
+                                <td>7</td>
                             </tr>
                             <tr>
                                 <td>SQL</td>
-                                <td>2</td>
+                                <td>5</td>
                             </tr>
                             <tr>
                                 <td>High Level Shader Language</td>
-                                <td>1 to 2</td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>Three.js</td>
@@ -491,7 +504,7 @@
                             </tr>
                             <tr>
                                 <td>Node.js</td>
-                                <td>2</td>
+                                <td>1</td>
                             </tr>
                             <tr>
                                 <td>Bootstrap</td>
@@ -499,7 +512,7 @@
                             </tr>
                             <tr>
                                 <td>C++</td>
-                                <td>1</td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>Objective C</td>
@@ -523,7 +536,7 @@
                             </tr>
                             <tr>
                                 <td>Android (Unity Games)</td>
-                                <td>1</td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>iOS</td>
@@ -545,7 +558,7 @@
                             </tr>
                             <tr>
                                 <td>Unreal Engine</td>
-                                <td>1</td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>Blender</td>
