Remove more identify information
- Stay anon
- Fix title
- Update description to include scrum details in it instead of in title

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Software Dev & Digital DJ</br>VR | Games | Cloud</br></br></br></br>Scrum Master | Product Owner</br>AWS Certified | Azure Certified</h1>
+                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Software Dev & Digital DJ</br>VR | Games | Cloud</br></br>AWS Certified<br/>Azure Certified</h1>
                 <!-- <hr>
                 <p style="text-shadow: 0.05em 0.05em #55b3ff;">Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p> -->
             </div>
@@ -140,10 +140,9 @@
                     <h2 class="section-heading">About the Tech Guru Mann</h2>
                     <hr class="light">
                     <p class="text-faded">From software auditor to virtual reality game developer, the Tech Guru Mann has come a long way. During his undergraduate career at Lehigh University, the tech guru worked hard auditing software for Lehigh's Center for Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's degree in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
-                    <p class="text-faded">The guru moved on to designing POS touch screen menus for bars and restaurants at Harbortouch America. And soon after, he was blessed with an opportunity to begin doing mobile development. The tech guru developed 10 example iPad and iPhone apps during his training and later moved on to Android development.</p>
                     <p class="text-faded">The guru has worked with big name companies like Ecotech Marine and Highmark Health, and was a technical R&D specialist for Comcast, the largest corporation in Center City Philadelphia, developing virtual and mixed reality experiences for 6 years.</p>
-                    <p class="text-faded">Today, the Tech Guru Mann specializes in cloud development and contributes to the safety, support, & security of the US government's monetary policy on a daily basis.</p>
-                    <p class="text-faded">In his free time, the guru immerses himself in his musical efforts, DJing for video game communities, volunteering for cons, and making his own music. He is an avid gamer with a love of all things Final Fantasy.</p>
+                    <p class="text-faded">Today, the Tech Guru Mann specializes in cloud development as a certified Scrum Master & Product Owner, contributing to the safety, support, & security of the US government's monetary policy on a daily basis.</p>
+                    <p class="text-faded">In his free time, the guru immerses himself in his musical efforts, DJing for video game communities, volunteering for cons, and making his own music.</p>
                     <p class="text-faded">The Tech Guru Mann worked hard for 6 years to earn his black sash in the art of Wing Chun kung fu at <a href="https://www.instagram.com/philadelphiawingchunschool" style="color: aquamarine;font-weight: bold;">Philadelphia Wing Chun</a>, and is now the latest swordsman at <a href="https://www.phillykendo.com" style="color: aquamarine;font-weight: bold;">US Yong Kum Kwan Kendo school</a>.</p>
                 </div>
             </div>
@@ -634,7 +633,7 @@
                                 <td>2023</td>
                             </tr>
                             <tr>
-                                <td><a target="_blank" href="img/certifications/power_platform_badge_1524x828.png" style="color: aquamarine;font-weight: bold;">Power Platform Advisor for the Federal Reserve</a></td>
+                                <td><a target="_blank" href="img/certifications/power_platform_badge_1524x828.png" style="color: aquamarine;font-weight: bold;">Power Platform Advisor</a></td>
                                 <td>2023</td>
                             </tr>
                         </tbody>
