Update Index with simple headline

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Software Dev & Digital DJ</br>VR | Games | Cloud</br></br>AWS Certified<br/>Azure Certified</h1>
+                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Cloud Engineer</br>VR | Games | AI</br></h1>
                 <!-- <hr>
                 <p style="text-shadow: 0.05em 0.05em #55b3ff;">Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p> -->
             </div>
@@ -142,8 +142,8 @@
                     <p class="text-faded">From software auditor to virtual reality game developer, the Tech Guru Mann has come a long way. During his undergraduate career at Lehigh University, the tech guru worked hard auditing software for Lehigh's Center for Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's degree in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
                     <p class="text-faded">The guru has worked with big name companies like Ecotech Marine and Highmark Health, and was a technical R&D specialist for Comcast, the largest corporation in Center City Philadelphia, developing virtual and mixed reality experiences for 6 years.</p>
                     <p class="text-faded">Today, the Tech Guru Mann specializes in cloud development as a certified Scrum Master & Product Owner, contributing to the safety, support, & security of the US government's monetary policy on a daily basis.</p>
-                    <p class="text-faded">In his free time, the guru immerses himself in his musical efforts, DJing for video game communities, volunteering for cons, and making his own music.</p>
-                    <p class="text-faded">The Tech Guru Mann worked hard for 6 years to earn his black sash in the art of Wing Chun kung fu at <a href="https://www.instagram.com/philadelphiawingchunschool" style="color: aquamarine;font-weight: bold;">Philadelphia Wing Chun</a>, and is now the latest swordsman at <a href="https://www.phillykendo.com" style="color: aquamarine;font-weight: bold;">US Yong Kum Kwan Kendo school</a>.</p>
+                    <p class="text-faded">In his free time, the guru immerses himself in his musical efforts, DJing for video game communities, volunteering & assisting others at gaming conventions, and making his own music.</p>
+                    <p class="text-faded">The Tech Guru Mann worked hard for 6 years to earn his black sash in the art of Wing Chun kung fu at <a href="https://www.instagram.com/philadelphiawingchunschool" style="color: aquamarine;font-weight: bold;" target="_blank">Philadelphia Wing Chun</a>, and is now the latest swordsman at <a href="https://www.phillykendo.com" style="color: aquamarine;font-weight: bold;" target="_blank">US Yong Kum Kwan Kendo school</a>.</p>
                 </div>
             </div>
         </div>
@@ -617,19 +617,19 @@
                                 <td>2017</td>
                             </tr>
                             <tr>
-                                <td><a target="_blank" href="img/certifications/MannScrumCert2017.png" style="color: aquamarine;font-weight: bold;">Certified Scrum Master</a></td>
+                                <td><a target="_blank" href="img/certifications/csm_cert.png" style="color: aquamarine;font-weight: bold;">Certified Scrum Master</a></td>
                                 <td>2017</td>
                             </tr>
                             <tr>
-                                <td><a target="_blank" href="img/certifications/MannProductOwnerCert2021.png" style="color: aquamarine;font-weight: bold;">Certified Product Owner</a></td>
+                                <td><a target="_blank" href="img/certifications/cspo_cert.png" style="color: aquamarine;font-weight: bold;">Certified Product Owner</a></td>
                                 <td>2021</td>
                             </tr>
                             <tr>
-                                <td><a target="_blank" href="https://www.credly.com/badges/f3ba68b4-3649-4901-a93b-ac98eb73ecf2/linked_in_profile" style="color: aquamarine;font-weight: bold;">AWS Cloud Practitioner</a></td>
+                                <td><a target="_blank" href="https://cp.certmetrics.com/amazon/en/public/verify/credential/71W8HRNK5E14Q0KR" style="color: aquamarine;font-weight: bold;">AWS Cloud Practitioner</a></td>
                                 <td>2022</td>
                             </tr>
                             <tr>
-                                <td><a target="_blank" href="https://www.credly.com/badges/08c19146-f1ee-4b8b-863d-545bf8ebc0cc/linked_in_profile" style="color: aquamarine;font-weight: bold;">Microsoft Azure Fundamentals</a></td>
+                                <td><a target="_blank" href="https://learn.microsoft.com/api/credentials/share/en-us/mann0nomix/2AE3DB3B3C0B0022?sharingId=204F6D5D32A0A419" style="color: aquamarine;font-weight: bold;">Microsoft Azure Fundamentals</a></td>
                                 <td>2023</td>
                             </tr>
                             <tr>
