--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Cloud Engineer</br>VR | Games | AI</br></h1>
+                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Cloud Engineer</br>Fintech | VR | AI</br></h1>
                 <!-- <hr>
                 <p style="text-shadow: 0.05em 0.05em #55b3ff;">Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p> -->
             </div>
@@ -141,9 +141,9 @@
                     <hr class="light">
                     <p class="text-faded">From software auditor to virtual reality game developer, the Tech Guru Mann has come a long way. During his undergraduate career at Lehigh University, the tech guru worked hard auditing software for Lehigh's Center for Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's degree in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
                     <p class="text-faded">The guru has worked with big name companies like Ecotech Marine and Highmark Health, and was a technical R&D specialist for Comcast, the largest corporation in Center City Philadelphia, developing virtual and mixed reality experiences for 6 years.</p>
-                    <p class="text-faded">Today, the Tech Guru Mann specializes in cloud development as a certified Scrum Master & Product Owner, contributing to the safety, support, & security of the US government's monetary policy on a daily basis.</p>
+                    <p class="text-faded">Today, the Tech Guru Mann specializes in cloud development as a certified Scrum Master & Product Owner, contributing to the safety, support, & security of the US government's monetary policy.</p>
                     <p class="text-faded">In his free time, the guru immerses himself in his musical efforts, DJing for video game communities, volunteering & assisting others at gaming conventions, and making his own music.</p>
-                    <p class="text-faded">The Tech Guru Mann worked hard for 6 years to earn his black sash in the art of Wing Chun kung fu at <a href="https://www.instagram.com/philadelphiawingchunschool" style="color: aquamarine;font-weight: bold;" target="_blank">Philadelphia Wing Chun</a>, and is now the latest swordsman at <a href="https://www.phillykendo.com" style="color: aquamarine;font-weight: bold;" target="_blank">US Yong Kum Kwan Kendo school</a>.</p>
+                    <p class="text-faded">The Tech Guru Mann is always focused and has worked hard for 6 years to earn his black sash in the art of Wing Chun kung fu at <a href="https://www.instagram.com/philadelphiawingchunschool" style="color: aquamarine;font-weight: bold;" target="_blank">Philadelphia Wing Chun</a>, and is now the latest swordsman at <a href="https://www.phillykendo.com" style="color: aquamarine;font-weight: bold;" target="_blank">US Yong Kum Kwan Kendo school</a>.</p>
                 </div>
             </div>
         </div>
